[project]
name = "mac2location"
version = "0.1.0"
description = "通过 MAC 地址查询对应的经纬度坐标和实际地理位置"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "uvicorn>=0.42.0",
]
